--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grafana-simple-json",
+  "name": "healthchecks-io-datasource",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -10,12 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grafana/simple-json-datasource.git"
+    "url": "git+https://github.com/jameskirsop/simple-json-datasource.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/grafana/simple-json-datasource/issues"
+    "url": "https://github.com/jameskirsop/simple-json-datasource/issues"
   },
   "engineStrict": true,
   "devDependencies": {
@@ -42,5 +42,5 @@
   "dependencies": {
     "lodash": "^4.17.4"
   },
-  "homepage": "https://github.com/grafana/simple-json-datasource#readme"
+  "homepage": "https://github.com/jameskirsop/simple-json-datasource#readme"
 }
